Story(CCLS-2206) Enable Update OPA Assessment endpoint
